# bbcat

./: Cargo.toml  README.md  THIRD_PARTY_LICENSES  test.apng
.github/workflows/: packages.yml  pages.yml
site/: index.html
site/docs/: index.html
src/: adf.rs  animation_image.rs  ansi.rs  archive.rs  asciimation.rs  bgi_font.rs  ddw.rs  font.rs  font_data.b64  kitty.rs  lib.rs  main.rs  png.rs  rip.rs  sauce.rs  terminal.rs  text.rs  xbin.rs
src/bgi_fonts/: cp437_f08.b64  strokes.b64
src/fonts/: amiga_microknight.b64  amiga_topaz_2_plus.b64  empathy_by_skaboy.b64
tests/: library_api.rs
